fix: z-index for hover and disabled style

--- a/src/runtime/assets/css/main.css
+++ b/src/runtime/assets/css/main.css
@@ -50,7 +50,6 @@
       display: block;
       position: absolute;
       inset: 0;
-      z-index: 9999;
 
       background-color: rgba(0, 0, 0, 5%);
     }
@@ -59,7 +58,6 @@
       display: block;
       position: absolute;
       inset: 0;
-      z-index: 9999;
 
       background-color: rgba(0, 0, 0, 10%);
     }
@@ -76,7 +74,6 @@
     display: block;
     position: absolute;
     inset: 0;
-    z-index: 9999;
 
     backdrop-filter: saturate(0);
     background-color: rgba(255, 255, 255, 60%);
